--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
+.pb-1{
+  padding-bottom: 10px;
+}
 
 ul {
   list-style-type: none;
